--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,33 @@ repositories {
     flatDir {
        dirs 'libs'
    }
+   /*
        maven {
         url 'https://shimmersensing.jfrog.io/artifactory/ShimmerAPI'
     }
+    */
+    
+    maven {
+		name = "GitHubPackages"
+		url = uri("https://maven.pkg.github.com/ShimmerEngineering/Shimmer-Java-Android-API")
+		credentials {
+		/* Create gradle.properties file in GRADLE_USER_HOME/.gradle/ 
+		(e.g. C:/Users/YourUsername/.gradle/) with the two lines listed below. Fill in your 
+		Github ID and personal access token - as generated through the Github Developer 
+		Settings page. The token needs to have "read:packages" scope enabled on it: 
+		gpr.usr=GITHUB_USER_ID 
+		gpr.key=PERSONAL_ACCESS_TOKEN 
+		*/
+		username = project.findProperty("gpr.usr") ?: System.getenv("USERNAME")
+		password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+		/* should the above not work key in your username and password directly e.g.
+		username = "username"
+		password = "password"
+		DO NOT commit your username and password
+		*/
+			}
+		}
+
 }
 
 dependencies {
@@ -37,7 +61,14 @@ dependencies {
         //google()
     }
     //implementation 'net.java.dev.jna:jna:5.6.0@aar'
-    compile(group: 'com.shimmersensing', name: 'ShimmerDriverPC', version: '0.9.4beta')
+    // compile(group: 'com.shimmersensing', name: 'ShimmerDriverPC', version: '0.9.4beta')
+    
+    implementation (group: 'com.shimmerresearch', name:'shimmerdriverpc',version:'0.10.19_beta')
+    implementation (group: 'com.shimmerresearch', name:'shimmerdriver',version:'0.10.19_beta')
+    implementation (group: 'com.shimmerresearch', name:'shimmerbluetoothmanager',version:'0.10.19_beta')
+    
+    implementation 'net.java.dev.jna:jna:5.6.0'
+    
 }
 
 
